[gd_scene load_steps=13 format=3 uid="uid://b6103swkolubk"]

[ext_resource type="Shader" path="res://scripts/computer/portal/portal.gdshader" id="1_2dysk"]
[ext_resource type="Script" path="res://scripts/computer/portal/mirror.gd" id="2_c7l04"]

[sub_resource type="BoxMesh" id="BoxMesh_ibx28"]
size = Vector3(1, 2, 0.01)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5s3s5"]
transparency = 4
albedo_color = Color(0.152941, 1, 1, 0.0470588)

[sub_resource type="ViewportTexture" id="ViewportTexture_etq3f"]
viewport_path = NodePath("Portal/LeftPortalViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_qhc16"]
viewport_path = NodePath("Portal/RightPortalViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p2ikh"]
resource_local_to_scene = true
render_priority = 0
next_pass = SubResource("StandardMaterial3D_5s3s5")
shader = ExtResource("1_2dysk")
shader_parameter/x_offset = -0.061
shader_parameter/y_offset = 0.017
shader_parameter/left_tex = SubResource("ViewportTexture_etq3f")
shader_parameter/right_tex = SubResource("ViewportTexture_qhc16")

[sub_resource type="PlaceholderMesh" id="PlaceholderMesh_asav8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3tqpd"]
albedo_color = Color(0.670588, 0.670588, 0, 1)
metallic = 0.67
roughness = 0.62

[sub_resource type="BoxMesh" id="BoxMesh_c68xd"]
material = SubResource("StandardMaterial3D_3tqpd")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1ddiy"]
albedo_color = Color(0.670588, 0.670588, 0, 1)
metallic = 0.67
roughness = 0.62

[sub_resource type="BoxMesh" id="BoxMesh_r7er8"]
material = SubResource("StandardMaterial3D_1ddiy")

[node name="Mirror" type="Node3D"]

[node name="Portal" type="MeshInstance3D" parent="." node_paths=PackedStringArray("portal_reference")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
layers = 16
cast_shadow = 0
mesh = SubResource("BoxMesh_ibx28")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_p2ikh")
script = ExtResource("2_c7l04")
portal_reference = NodePath("../PortalReference")

[node name="Helper" type="Node3D" parent="Portal"]

[node name="LeftPortalViewport" type="SubViewport" parent="Portal"]
size = Vector2i(1824, 1840)
render_target_update_mode = 3

[node name="LeftCamera" type="Camera3D" parent="Portal/LeftPortalViewport"]
cull_mask = 1048559
h_offset = -0.034
fov = 98.3

[node name="RightPortalViewport" type="SubViewport" parent="Portal"]
size = Vector2i(1824, 1840)
render_target_update_mode = 3

[node name="RightCamera" type="Camera3D" parent="Portal/RightPortalViewport"]
cull_mask = 1048559
h_offset = 0.034
fov = 98.3

[node name="PortalReference" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, -1.50996e-07, 0, 1, 0, -1.50996e-07, 0, -1, 0, 1, 0)
layers = 16
cast_shadow = 0
mesh = SubResource("PlaceholderMesh_asav8")
skeleton = NodePath("../..")

[node name="Helper" type="Node3D" parent="PortalReference"]

[node name="MirrorFrame" type="MeshInstance3D" parent="."]
transform = Transform3D(0.237, 0, 0, 0, 2.112, 0, 0, 0, 0.237, -0.556692, 1.01902, 0)
mesh = SubResource("BoxMesh_c68xd")

[node name="MirrorFrame2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.237, 0, 0, 0, 2.112, 0, 0, 0, 0.237, 0.590632, 1.01902, 0)
mesh = SubResource("BoxMesh_c68xd")

[node name="MirrorFrame3" type="MeshInstance3D" parent="."]
transform = Transform3D(-1.03596e-08, -1.38357, 0, 0.237, -6.04778e-08, 0, 0, 0, 0.237, 0.0142943, 0, 0)
mesh = SubResource("BoxMesh_r7er8")

[node name="MirrorFrame4" type="MeshInstance3D" parent="."]
transform = Transform3D(-1.03596e-08, -1.38357, 0, 0.237, -6.04778e-08, 0, 0, 0, 0.237, 0.0142943, 2.08644, 0)
mesh = SubResource("BoxMesh_r7er8")
